; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_drd.c_cdns3_is_host.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_drd.c_cdns3_is_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdns3 = type { i64 }

@USB_DR_MODE_HOST = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cdns3_is_host(%struct.cdns3* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cdns3*, align 8
  store %struct.cdns3* %0, %struct.cdns3** %3, align 8
  %4 = load %struct.cdns3*, %struct.cdns3** %3, align 8
  %5 = getelementptr inbounds %struct.cdns3, %struct.cdns3* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @USB_DR_MODE_HOST, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %17

10:                                               ; preds = %1
  %11 = load %struct.cdns3*, %struct.cdns3** %3, align 8
  %12 = call i32 @cdns3_get_id(%struct.cdns3* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %17

15:                                               ; preds = %10
  br label %16

16:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %14, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @cdns3_get_id(%struct.cdns3*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
